MiniBrowser --window-size 480x800 www.nytimes.com doesn't paint bottom tiles. https://bugs.webkit.org/show_bug.cgi?id=80313

Patch by Hugo Parente Lima <hugo.lima@openbossa.org> on 2012-03-06
Reviewed by Kenneth Rohde Christiansen.

Fix the math to get the visible rectangle and add a method to get it.

* UIProcess/API/qt/qquickwebview.cpp:
(QQuickWebViewPrivate::visibleContentsRect):
(QQuickWebViewFlickablePrivate::_q_commitScaleChange):
(QQuickWebViewPrivate::_q_commitPositionChange):
* UIProcess/API/qt/qquickwebview_p_p.h:
(QQuickWebViewPrivate):

Canonical link: https://commits.webkit.org/97589@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@109957 268f45cc-cd09-0410-ab3c-d52691b4dbfc